* V1.9.7.1
  * improved OpenME to call CK in dynamic websites
  * added passing of $_SESSION, $_POST, $_GET to CK via OpenME
  * added "Access-Control-Allow-Origin=*" to module:web 
    to be able to access CK from local web pages

* V1.9.7
  * allowed local widget to fetch data from cKnowledge.org (or other) website:
    https://github.com/ctuning/ck/pull/93
  * automatically print API of redirected functions (ck <action> <module> --help)
  * improved module API printing
  * added pypi download stats
  * fixed minor problem with "ck renew repo" - now takes already existing UID instead of generating a new one

* V1.9.6
  * fixed minor bug in "ck rm" when deleting entries only from allowed repos (for crowdsourcing)
  * fixed problem with wrong repo UID when repo is installed from zip archive
  * added flag --all to "ck zip" to archive all files including .git
  * fixed "ck add repo --zip" if zip contains Git repository (making it shared)

* V1.9.5
  * added "debug":"yes" to kernel for GitHub versions
  * fixed minor bug in detection of minimal CK kernel version
    (important since current python3-ck in official Ubunutu 17.04 is quite outdated: v1.7.2)
  * fixed tests to report the error detected by running ck.access() or equivalent
  * testfix: stop testing 3.5dev and nightly Python, but add 3.6 which everyone uses
  * improved auto-generation of a list of all modules and actions: 
    http://cKnowledge.org/shared-modules.html
  * made removal of \r in text files safer on Windows (across different Python versions)
  * added TARGET remark to all CK kernel functions to show target audience (end users vs CK kernel developers).
    Used in "ck list_kernel_functions misc".
  * improved recaching of repos (taking latest updates from .ckr.json into account)
  * blocked copying of repositories to avoid duplication of CK entries
  * added "ck python_version" to print Python version used by CK
  * now when calling ck without arguments, it will print just a short help
